fixing extra margin on the bottom of the splash component

--- a/src/Components/Common/Splash/Splash.less
+++ b/src/Components/Common/Splash/Splash.less
@@ -1,6 +1,7 @@
 .Splash {
   .progress {
     height: 50px;
+    margin: 0;
   }
 
   .Splash-text {
